fix: changed the layout of the page for better readability

--- a/styles.css
+++ b/styles.css
@@ -85,3 +85,7 @@ button {
 #designSelect {
     text-align: center;
 }
+
+.main-design {
+    display: flex;
+}
